# tptlog

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/tpt/: macro_def.h  macro_undef.h  platform.h  ring_buffer.h  sync.h  thread.h  time.h
include/tpt/android/: platform.h
include/tpt/darwin/: platform.h
include/tpt/ios/: platform.h
include/tpt/linux/: platform.h
include/tpt/windows/: platform.h
include/tptlog/: log.h  output.h
src/: CMakeLists.txt
src/tpt/: CMakeLists.txt
src/tpt/posix/: thread.cc  time.cc
src/tpt/windows/: thread.cc  time.cc
src/tptlog/: CMakeLists.txt  log.cc  output.cc
tests/: CMakeLists.txt
tests/tpt/: CMakeLists.txt  sync_test.cpp  thread_test.cpp  time_test.cpp
tests/tptlog/: CMakeLists.txt  log_test.cpp
